# myvector

./: .clang-format  .dockerignore  .gitignore  .jscpd.json  .markdownlint.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEMO.md  Dockerfile  Dockerfile.oraclelinux  Dockerfile.oraclelinux8  Dockerfile.oraclelinux9  Makefile  NOTICE  README.md  myvector.cc  myvector.rb  myvector_binlog.cc  myvectorutils.h  pr_body.txt
.agent/workflows/: build.md
.cursor/rules/: agent-workflow.mdc
.github/: .linter.yaml  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  zizmor.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/linters/: zizmor.yaml
.github/workflows/: benchmark-issue79.yml  ci.yml  docker-publish.yml  linter.yml  release.yml
docs/: ANN_BENCHMARKS.md  BUILDING_MACOS.md  BUILD_MODES.md  CODE_OF_CONDUCT.md  COMPONENT_MIGRATION_PLAN.md  CONFIGURATION.md  DEMO.md  DOCKER_IMAGES.md  ISSUE_79_ANALYSIS.md  ISSUE_79_BENCHMARK_BASELINE.md  ISSUE_81_CLOSE_COMMENT.md  ONLINE_INDEX_UPDATES.md  PR76_PROJECT.md  PR76_REVIEW_RESPONSE.md  PR76_REVIEW_VERIFICATION.md  PR76_STATUS_2026-03-07.md  RELEASE_CANDIDATE_PLAN_MAR_2026.md  STRUCTURE.md
docs/rfc/: RFC-004-issue-body.md
docs/superpowers/plans/: 2026-04-20-pr76-split.md  2026-04-21-myvector-log-abstraction.md  2026-04-23-9.7-lts-component-build.md
docs/superpowers/specs/: 2026-04-20-pr76-split-design.md  2026-04-21-myvector-log-abstraction-design.md  2026-04-22-9.6-build-gcc-toolset14-design.md  2026-04-23-9.7-lts-component-build-design.md
examples/stanford50d/: README.md  buildindex.sql  create-basic.sql  create.sql  search.sql
include/: bruteforce.h  hnswalg.h  hnswdisk.h  hnswdisk.i  hnswlib.h  my_config.h  mysql_component_service_base.h  mysql_version.h  myvector.h  myvector_errors.h  myvector_log.h  myvectorutils.h  space_ip.h  space_l2.h  stop_condition.h  visited_list_pool.h
licenses/: README.md
mysql-test/: suite.pm
mysql-test/include/: have_myvector.inc
mysql-test/r/: ann_search.result  index_load_save.result  online_update.result  udf_construct_display.result  udf_distance.result  udf_is_valid.result
mysql-test/suite/myvector/: my.cnf
mysql-test/suite/myvector/r/: basic.result  distance.result  indexing.result  online.result  udf_construct_per_row.result  udfs.result
mysql-test/suite/myvector/t/: basic.test  distance.test  indexing.test  online.test  udf_construct_per_row.test  udfs.test
mysql-test/t/: ann_search.test  index_load_save.test  online_update.test  udf_construct_display.test  udf_distance.test  udf_is_valid.test
release/: POST_RC_DOCKER_SMOKE_PLAN.md  RC1_CHECKLIST_v1.26.3.md  RC1_STATUS_v1.26.3.md  RELEASE_NOTES_DRAFT.md  RELEASE_NOTES_TEMPLATE.md
scripts/: benchmark-issue79.sh  build-component-9.6-docker.sh  build-component-9.7-docker.sh  build-component.sh  build-docker-local.sh  build-release.sh  pre-pr.sh  run-mtr-sandbox.sh  sandbox-component-test.sh  smoke-published-images.sh  smoke-readme.sh  test-docker-image.sh  test-online-updates.sh
sql/: myvectorplugin.sql
src/: myvector.cc  myvector_binlog.cc  myvector_plugin.cc  myvectorutils.cc
src/component_src/: myvector.json  myvector_binlog_service.cc  myvector_binlog_service.h  myvector_component.cc  myvector_component_config.cc  myvector_query_rewrite_service.cc  myvector_udf_service.cc  myvector_udf_service.h
tasks/: PLANNING.md  lessons.md  todo.md
